ui/style.css
/* ... */
.panel-out-header button.button {
  border: 0 !important;
  box-shadow: initial !important;
  background: 0;
  padding: 5px calc(2 * var(--margin-base));
  border-radius: 0;
  display: inline-flex;
  align-items: center;

  svg {
    color: red;
    height: 15px;
    width: 15px;
  }
}

.panel-out-header .button.selected {
  border: 1px solid white;
  border-bottom: 0;
  background: #333;
  color: white;
}

.panel-preview {
  overflow: auto;
  height: 100%;
}

.panel-preview-results {
  margin: 5px;
  font-size: 0.9rem;

  pre {
    background: transparent !important;
  }
}

.panel-out .button:disabled {
  background: transparent;
  color: white;
}

.panel--empty .panel-body {
  display: none;
}

.new-panel {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: calc(2 * var(--margin-base)) 0;
}

.new-panel-short {
  margin-left: var(--margin-base);
}

.card p {
  max-width: 800px;
}

.text-muted {
  font-size: 0.9rem;
  color: #777;
}

.tooltip {
  font-size: 0.9rem;
}

.tooltip-body {
  position: absolute;
  top: 24px;
  left: 0;
  display: none;
  background: rgba(30, 30, 30, 0.75);
  border: 1px solid black;
  color: white;
  padding: 10px;
  z-index: 1;
  max-width: 400px;
  box-shadow: 0 1px 3px 0 #aaa;
}

.tooltip-icon {
  color: #ccc;
  cursor: pointer;
  cursor: hand;
  padding-left: 5px;
}

.tooltip:hover .tooltip-body {
  display: initial;
}

.tooltip:hover .tooltip-icon {
  color: initial;
}

.alert {
  padding: calc(2 * var(--margin-base));
  font-size: 0.75rem;
  overflow-wrap: anywhere;

  pre {
    white-space: pre-wrap;
  }

  a {
    padding: 0 5px;
  }

  p code {
    border: 1px solid #ddd;
    background: rgba(255, 255, 255, 0.5);
    margin: 0 3px;
    padding: 3px;
    line-height: 26px;
  }
}

.alert > svg {
  height: 30px;
  width: 30px;
  margin-right: calc(2 * var(--margin-base));
  color: #555;
}

.alert.alert-fatal {
  font-size: initial;
}

.alert-warning {
  background: #fff4e7;
  border: 1px solid #ffc0c0;
}

.alert-error {
  background: #ffe7e7;
  border: 1px solid #ffc0c0;
}

.alert-info {
  background: #e7f7ff;
  border: 1px solid #c0f0ff;
}

.share {
  position: relative;
}

.share-details {
  display: none;
  position: absolute;
  top: 30px;
  right: 1px;
  background: var(--background-light);
  border: 1px solid var(--border-light);
  padding: calc(2 * var(--margin-base));
  width: 400px;
  color: black;
}

.share-details a {
  color: blue;
  margin: 0;
}

.share:focus-within .share-details {
  display: block;
}

.share-details input {
  border: 1px solid;
  width: 100%;
}

.text-right {
  text-align: right;
}

.text-center {
  text-align: center;
}

.text-light {
  color: #777;
}

.text-success {
  color: var(--green);
}

.text-failure {
  color: #a00505;
}

.form-group {
  padding: 10px 0;

  .form-group-label {
    font-size: initial;
  }

  .form-group-children {
    padding: 10px;
  }
}

.form-group--major {
  .form-group-label {
    font-size: larger;
    font-weight: bold;
  }
}

.form-row {
  padding: var(--margin-base) 0;
  min-height: 40px;
  display: flex;
  align-items: center;
}

.version {
  text-align: center;
  font-size: 0.9rem;
  color: #aaa;
  padding: 30px 0;
}

.table,
canvas {
  max-height: 100%;
  padding: 0 calc(2 * var(--margin-base));
  margin: 30px auto;
}

.table--small,
.canvas--small {
  width: 1024px !important;
  max-width: 100%;
}

.table--medium,
.canvas--medium {
  width: 75% !important;
}

.table--large,
.canvas--large {
  width: 100% !important;
}

.modal {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 2;
  background: rgba(0, 0, 0, 0.5);
}

.modal-body {
  background: var(--background-light);
  border: 1px solid var(--border-light);
  padding: calc(2 * var(--margin-base));
}

.card {
  padding: calc(2 * var(--margin-base));
  height: min-content;
}

.project-name {
  width: 500px;
}

.card--full {
  width: 100%;
}

.card--center,
.app--server .project-name {
  margin: 0 auto;
  margin-top: calc(2 * var(--margin-base));
}

.project-name .input,
.project-name .input input,
.project-name .button {
  width: 100%;
  padding: calc(2 * var(--margin-base));
}

.project-existing {
  border-top: 1px solid var(--border-light);
  padding-top: calc(2 * var(--margin-base));
  margin-top: calc(2 * var(--margin-base));

  .project-selector,
  .project-timestamp {
    margin: 0;
    margin-right: calc(2 * var(--margin-base));
  }
}

.table {
  border-collapse: collapse;

  th {
    text-align: left;
  }

  th,
  td {
    padding: 5px;
  }
}

tbody tr {
  border-top: 1px solid var(--darker-light);
}

.confirm-wrapper {
  display: inline-block;
}

.confirm {
  position: relative;
}

.confirm-popup {
  display: none;
  position: absolute;
  top: calc(100% + 5px);
  right: 0;
  z-index: 4;
  padding: calc(2 * var(--margin-base));
  min-width: 200px;
  background: var(--background-light);
  box-shadow: 0 1px 3px 0 #aaa;
  border: 1px solid var(--border-light);
  font-size: 1rem;
}

.confirm-popup .button + .button {
  display: inline-block;
  margin-left: calc(2 * var(--margin-base));
}

.confirm-popup--open {
  display: block;
}

.confirm-popup--right {
  left: 0;
  right: unset;
}

.dropdown {
  position: relative;

  a {
    color: blue;
    font-size: initial;
  }

  p,
  .dropdown-anchor a {
    font-size: 0.75rem;
  }
}

.dropdown-body {
  display: none;
  z-index: 15;
  position: absolute;
  right: 0;
  top: calc(100% + 5px);
  padding: calc(2 * var(--margin-base));
  background: var(--background-light);
  width: 300px;
  box-shadow: 0 1px 3px 0 #aaa;
}

.dropdown-section:not(:last-of-type) {
  border-bottom: 1px solid var(--border-light);
  padding-bottom: 10px;
  margin-bottom: calc(2 * var(--margin-base));
}

.dropdown-sectionName {
  text-transform: uppercase;
  font-size: 0.9rem;
  color: #999;
}

.dropdown-item {
  padding-top: calc(2 * var(--margin-base));
}

.dropdown.dropdown--open .dropdown-body {
  display: initial;
}
/* ... */

